# typst-editor

./: AMELIORATIONS.md  LICENSE  package-lock.json  package.json  preview.html  vite.config.ts
docs/superpowers/plans/: 2026-04-30-ameliorations.md  2026-05-06-navigation-redesign.md
docs/superpowers/specs/: 2026-05-06-navigation-redesign.md
scripts/: bump-version.mjs
src/: App.test.tsx  App.tsx  preview.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: typst-editor.desktop
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: compiler.rs  filesystem.rs  ide.rs  mod.rs  project.rs  versioning.rs
src/components/: ProgressModal.tsx  Sidebar.test.tsx  Sidebar.tsx
src/components/Diagnostics/: DiagnosticsPanel.tsx  OutputTab.tsx  ProblemsTab.tsx
src/components/Editor/: CodeMirrorEditor.tsx  EditorPanel.tsx  EditorTabs.tsx
src/components/Explorer/: Explorer.test.tsx  Explorer.tsx  FileTree.tsx  OpenFilesList.tsx
src/components/History/: ListView.tsx  PreviewView.tsx  VersionsModal.tsx
src/components/Preview/: PagesViewer.tsx  Preview.test.tsx  PreviewPanel.tsx  StandalonePreview.tsx  Thumbnails.tsx
src/components/Search/: GlobalSearch.tsx
src/components/Settings/: SettingsModal.test.tsx  SettingsModal.tsx
src/hooks/: useCompilation.ts  useEscapeKey.ts  useProjectOps.ts  useSaveExport.ts
src/i18n/: translations.ts  useTranslation.ts
src/lib/: typst-language.ts  useBlobUrls.ts
src/store/: appStore.test.ts  appStore.ts
src/tauri/: commands.ts
(+5 files in other folders)
