[package]
name = "typst-editor"
version = "0.1.2"
description = "A visual Typst editor"
authors = ["Hacktiv Studio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "typst_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
zip = "2"
notify = "6"
walkdir = "2"
tempfile = "3"
chrono = { version = "0.4", features = ["clock"] }
fontdb = "0.21"
ureq = { version = "2", features = ["json"] }
typst = "0.13"
typst-svg = "0.13"
typst-pdf = "0.13"
typst-render = "0.13"
typst-ide = "0.13"
rayon = "1.12.0"
comemo = "0.4"
base64 = "0.22"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
